align fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1180,7 +1180,7 @@ padding:15px;
 
 .login-bold-text{
 /*margin-bottom:30%;*/
-margin:auto 30%;
+margin:auto 28%;
 color:#00AFF0;
 font-size:24px;
 font-family:"Bookshelf Symbol 7";  
